# ai-ml-sdk-for-vulkan

./: .clang-format  .cmakelintrc  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  BUILD_MACOS.md  BUILD_MACOS_README.md  BUILD_SUCCESS_MACOS.md  BUILD_SUMMARY.md  CLAUDE.md  CMakeLists.txt  COMPLETE_BUILD_REPORT.md  COMPLETE_JOURNEY_LOG.md  COMPLETE_SDK_ANALYSIS.md  CONTRIBUTING.md  DEEP_TECHNICAL_ANALYSIS.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_BUILD_STATUS.md  FINAL_BUILD_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  MACOS_DEVELOPMENT_GUIDE.md  ML_SDK_COMPREHENSIVE_GUIDE.md  ML_SDK_MACOS_FINAL_STATUS.md  README.md  SECURITY.md  ULTIMATE_SDK_ACHIEVEMENT_SUMMARY.md  add_missing_vulkan_types.sh  analyze_all_repos.sh  background_monitor.sh  build_all_components_macos.sh  build_all_macos.sh  build_all_ml_sdk_repos_macos.sh  build_complete_macos_arm64.sh  build_complete_sdk.sh  build_core_components.sh  build_emulation_layer.sh  build_emulation_layer_fixed.sh  build_fast_no_emulation.sh  build_in_docker.sh  build_minimal.sh  (+44 more)
.reuse/: dep5
arm-ml-sdk-vulkan-macos-production/: RELEASE_NOTES.md  install.sh  manifest.json
arm-ml-sdk-vulkan-macos-production/docs/: USER_GUIDE.md
arm-ml-sdk-vulkan-macos-production/examples/: style_transfer_demo.py
arm-ml-sdk-vulkan-macos-production/shaders/: access_int_border.spv  add.spv  add_shader_with_push_constants.spv  add_vectors.spv  conv1d_fixed.spv  float_shader.spv  int_shader.spv  matrix_multiply.spv  optimized_conv2d.spv  passthrough_RG16.spv  passthrough_RGBA16.spv  passthrough_glsl_sampler_R16.spv  sub_shader.spv  tensor_all_access.spv  uint_shader.spv
arm-ml-sdk-vulkan-macos-production/tools/: run_ml_inference.py
benchmarks/scripts/: generate_report.py  run_benchmarks.py
benchmarks/shaders/: matrix_mult_naive.comp  matrix_mult_naive.spv  matrix_mult_tiled.comp  matrix_mult_tiled.spv  memory_bandwidth.comp  memory_bandwidth.spv  vector_ops.comp  vector_ops.spv
build-fast/: .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  tablegen_compile_commands.yml
build-fast/emulation-layer/: DartConfiguration.tcl
build-fast/emulation-layer/graph/: VkLayer_Graph.json
build-fast/emulation-layer/spirv-cross/: gitversion.h  spirv_cross_cConfig.cmake  spirv_cross_coreConfig.cmake  (+6 more)
build-final/tests/: add_vectors_scenario.json  create_test_data.py  input_a.npy  input_b.npy
build-macos-complete/: build_model_converter.cmake
build-macos-complete/flatbuffers/: .ninja_deps  .ninja_log  build.ninja  flatc  flatsamplebfbs  flatsamplebinary  flatsampletext  flattests
build-macos-complete/full-sdk/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-macos-complete/model-converter/: CPackConfig.cmake  CPackSourceConfig.cmake
build-macos-complete/scenario-runner/: CPackConfig.cmake  CPackSourceConfig.cmake
build-macos-complete/spirv-tools/: .ninja_deps  .ninja_log  SPIRV-Tools-shared.pc  SPIRV-Tools.pc  build.ninja
build-ninja/: .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  tablegen_compile_commands.yml
build-ninja/emulation-layer/: CTestCustom.cmake  DartConfiguration.tcl
build-ninja/model-converter/: LICENSE
build-official/: .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  tablegen_compile_commands.yml
build-official/emulation-layer/: DartConfiguration.tcl
build-official/model-converter/: VGFDialect.cpp.inc  VGFDialect.h.inc  VGFEnums.cpp.inc  VGFEnums.h.inc  VGFOps.cpp.inc  VGFOps.h.inc  passes.hpp.inc
cmake/: FindSphinx.cmake  doxygen.cmake  package.cmake  prePackBuild.cmake  prePackInstall.cmake  sphinx.cmake
docker/: Dockerfile
docs/: Doxyfile  docs.cmake
docs/source/: architecture.rst  building.rst  cloning.rst  conf.py  index.rst  introduction.rst  license.rst  puml.rst  tensor_aliasing_tutorial.rst  tutorial.rst
macos-compatibility-patches/: CMakeLists_patches.cmake  fix_platform_checks.patch  fix_scenario_runner_types.sh  spirv_tools_compat.cpp  vulkan_ml_extensions_wrapper.hpp
minimal-emulation/: CMakeLists.txt  VkLayer_ARM_emulation.json.in
minimal-emulation/src/: graph_emulation.cpp  tensor_emulation.cpp
scripts/: build.py  build.py.bak  check_images_closeby.py  compare_numpy.py  dump_numpy.py  run_model_e2e.py
test-suite/: create_test_data.py  run_benchmarks.sh  validate_results.py
test-suite/data/: const2_large.npy  const2_medium.npy  conv_input.npy  conv_kernel_3.npy  matrix_a_128.npy  matrix_a_32.npy  matrix_a_64.npy  matrix_b_128.npy  matrix_b_32.npy  matrix_b_64.npy  ones_large.npy  ones_small.npy  rand_large.npy  rand_medium.npy  rand_small.npy  seq_large.npy  seq_medium.npy
test-suite/scenarios/: test_add.json  test_relu.json
test-suite/shaders/: add.comp  conv1d_fixed.comp  multiply.comp  relu.comp  sigmoid.comp
tools/: TRACE_FILE
unified-ml-sdk/: README.md  create_advanced_ml_tools.sh  create_optimized_ml_pipeline.sh  create_production_ready_package.sh  create_style_transfer_demo.py  run_comprehensive_benchmarks.sh  test_ml_operations.py  test_unified_sdk.sh
unified-ml-sdk/shaders/: access_float_border.comp  access_float_border.spv  access_int_border.comp  add_one.comp  add_one_shader.comp  add_shader.comp  add_shader_unstructured_push_constants.comp  add_shader_unstructured_push_constants.spv  add_shader_with_push_constants.comp  add_two_shader.comp  add_vectors.comp  apply_offset.comp  apply_offset.spv  argmax.comp  arithmetic_right_shift.comp  avgpool2d.comp  cast.comp  clamp.comp  common.comp  concat.comp  conv1d.comp  conv2d.comp  conv3d.comp  copy_img_shader.comp  copy_img_shader.spv  copy_tensor_shader.comp  copy_tensor_shader.spv  depthwise_conv2d.comp  elementwise_binary.comp  elementwise_unary.comp  fft2d.comp  float_shader.comp  gather.comp  image_shader.comp  int_shader.comp  matmul.comp  matrix_multiply.comp  maxpool2d.comp  mul.comp  multiply.spv  (+44 more)
unified-ml-sdk/tools/: analyze_tflite_model.py  compare_performance.sh  convert_model_optimized.py  create_ml_pipeline.py  optimize_for_apple_silicon.py  profile_performance.py  realtime_performance_monitor.py  run_ml_demo.sh  validate_ml_operations.py
(+205 files in other folders)
